sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: not found: value a
  a=true
  ^AlgBubbleSort1:4: error: not found: value a
  while(a)
        ^AlgBubbleSort1:5: error: not found: value a
  	a=false
        ^AlgBubbleSort1:9: error: not found: value a
        a=true
        ^